--- a/app/src/main/res/layout/content_inv_count_report.xml
+++ b/app/src/main/res/layout/content_inv_count_report.xml
@@ -12,6 +12,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="#fff"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.tinyappsdev.forestsupply.ui.InvCountReportActivity"
     tools:showIn="@layout/activity_inv_count_report">
